--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
