--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
