--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^5.0.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
