--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-moment": "^1.1.3",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
